--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ion
 author: Paweł Perek <pawelperek99@gmail.com>
-description: HTTP framework
+description: A HTTP framework highly influenced by Express in which you easy and fast make a server without writing a lot of code
 homepage: https://github.com/drPeru/Ion
-version: 0.4.2
+version: 0.4.3
 environment:
   sdk: '>=2.0.0 <3.0.0'
